[project]
name = "days-of-stay"
version = "0.1.0"
description = "Analyze visa-free stay limits from Flighty flight data exports"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
analyze-korea-stay = "analyze_korea_stay:main"
visa-stay-analyzer = "visa_stay_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["analyze_korea_stay.py", "visa_stay_analyzer.py"]
